@@ -14,6 +14,8 @@
 
         * Added getter/setter for proxy on VrmlNodeCollision.
 
+        * Added getters/setters for VrmlNodeElevationGrid.
+
 2001-01-20  Braden McDaniel  <braden@endoframe.com>
 
         * Added getRoutes() method to VrmlNode, per patch from Joe
